--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
 confusable-homoglyphs==3.2.0
-Django==3.2
+Django==3.2.12
 django-axes==5.12.0
 django-filter==2.4.0
 django-ipware==3.0.2
@@ -12,13 +12,16 @@ django-registration==3.1.2
 django-tables2==2.3.4
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.2
+docopt==0.6.2
 idna==2.10
 mysqlclient==2.0.3
 oauthlib==3.1.0
+pipreqs==0.4.11
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
 six==1.15.0
-sqlparse==0.4.1
+sqlparse==0.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.4
+urllib3==1.26.8
+yarg==0.1.9
